// This file is auto-generated, DO NOT make any changes here
syntax = "proto3";
package SAP.internal.ppdd;


message PPACIOS {

  string deviceToken = 1;

  string apiToken = 2;
}